tests/ui/compile-fail/pinned_drop/unexpected_additional_item.stderr
error[E0438]: const `BAZ` is not a member of trait `pinned_init::PinnedDrop`
  --> tests/ui/compile-fail/pinned_drop/unexpected_additional_item.rs:11:5
   |
11 |     const BAZ: usize = 0;
   |     ^^^^^^^^^^^^^^^^^^^^^ not a member of trait `pinned_init::PinnedDrop`
